<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/characters_screen">

    <fragment
        android:id="@+id/characters_screen"
        android:name="com.yeyq.kursakademiaandroida.features.characters.presentation.CharacterFragment"
        android:label="@string/title_characters"
        tools:layout="@layout/fragment_character" />

    <fragment
        android:id="@+id/locations_screen"
        android:name="com.yeyq.kursakademiaandroida.features.locations.all.presentation.LocationsFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_location">

        <action
            android:id="@+id/action_navigate_from_locations_screen_to_location_details_fragment"
            app:destination="@id/location_details_screen"
            app:popUpTo="@id/episodes_screen" />
    </fragment>

    <fragment
        android:id="@+id/episodes_screen"
        android:name="com.yeyq.kursakademiaandroida.features.episodes.all.presentation.EpisodesFragment"
        android:label="@string/title_episodes"
        tools:layout="@layout/fragment_episodes">

        <action
            android:id="@+id/action_navigate_from_episodes_screen_to_episode_details_fragment"
            app:destination="@id/episode_details_screen"
            app:popUpTo="@id/episodes_screen" />
    </fragment>

    <fragment
        android:id="@+id/episode_details_screen"
        android:name="com.yeyq.kursakademiaandroida.features.episodes.details.presentation.EpisodeDetailsFragment"
        android:label="@string/title_episode_details"
        tools:layout="@layout/fragment_episode_details" />

    <fragment
        android:id="@+id/location_details_screen"
        android:name="com.yeyq.kursakademiaandroida.features.locations.details.presentation.LocationDetailsFragment"
        android:label="@string/title_location_details"
        tools:layout="@layout/fragment_location_details" />
</navigation>